Refactor project structure and add initial files

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-google-recaptcha": "^3.1.0",
+    "react-router-dom": "^6.26.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.11",
