--- a/pmsss_frontend/package.json
+++ b/pmsss_frontend/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.0.2",
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.26.1",
     "yup": "^1.4.0"
   },
